src/objects/ADvendio__Campaign_Order__c.object
<CustomObject>
    <description>This object is deprecated and not longer in use.</description>
    <fields>
        <fullName>ADvendio__AdServer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdServer</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipName>Campaign_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Media_Campaign__c</fullName>
        <label>Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipName>Campaign_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Order_ID__c</fullName>
        <externalId>true</externalId>
        <label>Order ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Campaign Order (deprecated)</label>
    <nameField>
        <displayFormat>CON-{000000}</displayFormat>
        <label>Campaign Order No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Orders (deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>